# ModPocket

./: .gitignore  Makefile  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .firebaserc  README.md  verify_generation.py
backend/functions/: README.md  export_deps.sh  image_generator.py  main.py  nusmods_parser.py  prompt_builder.py  pyproject.toml  requirements.txt
backend/functions/assets/: timetable.txt
frontend/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: DownloadButton.jsx  ErrorMessage.jsx  GenerateButton.jsx  Header.jsx  LinkInput.jsx  LoadingSpinner.jsx  PhonePreview.jsx
frontend/src/hooks/: useGenerateWallpaper.js
frontend/src/utils/: validateNusmodsUrl.js
scripts/: install-all.sh
