[project]
name = "modpocket-functions"
version = "0.1.0"
description = "ModPocket Firebase Functions - NUSMods Timetable Wallpaper Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-functions>=0.1.0",
    "firebase-admin>=6.4.0",
    "google-cloud-aiplatform>=1.70.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
